tests/ui/aggregate_types/fail/array_agg_requires_postgres.stderr
error[E0277]: this aggregate is not available for this dialect
 --> tests/ui/aggregate_types/fail/array_agg_requires_postgres.rs:5:13
  |
5 |     let _ = array_agg(raw_non_null::<SQLiteValue, drizzle::sqlite::types::Integer>("1"));
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use a dialect-specific alternative
  |
  = help: the trait `PostgresAggregateSupport` is not implemented for `drizzle_core::dialect::SQLiteDialect`
help: the trait `PostgresAggregateSupport` is implemented for `drizzle_core::dialect::PostgresDialect`
 --> core/src/expr/agg.rs
  |
  | impl PostgresAggregateSupport for PostgresDialect {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `array_agg`
 --> core/src/expr/agg.rs
  |
  | pub fn array_agg<'a, V, E>(expr: E) -> SQLExpr<'a, V, Array<E::SQLType>, Null, Agg>
  |        --------- required by a bound in this function
...
  |     V::DialectMarker: PostgresAggregateSupport,
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `array_agg`
